hash in doc is added
